[project]
name = "tdsp2-country-outline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "beautifulsoup4>=4.13.3",
    "fastapi==0.115.11",
    "httpx==0.28.1",
    "python-dateutil==2.8.2",
    "python-multipart==0.0.9",
    "requests==2.32.3",
    "uvicorn==0.34.0",
]
